--- a/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Activity.yml
@@ -19,5 +19,6 @@ Busybee\StudentBundle\Entity\Activity:
             - NotBlank: ~
         year:
             - Valid: ~
+            - NotBlank: ~
         course:
             - Valid: ~
