--- a/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
+++ b/src/Busybee/SystemBundle/Resources/config/updates/Setting_0_0_03.yml
@@ -7,7 +7,17 @@ student.groups:
     type: array
     displayName: Student Groups
     description: Usually the year groups that attend this school.
-    role: 'ROLE_REGISTRAR'
+    role: ROLE_REGISTRAR
     value:
         Year 7: Y7
         Year 8: Y8
+student.enrolment.status:
+    type: array
+    displayName: Student Enrolment Status
+    description: Reflects the status of student enrolment.
+    role: ROLE_ADMIN
+    value:
+        Future: Future
+        Current: Current
+        Past: Past
+        Archived: Archived
