Student Enrolments Validation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/StudentBundle/Resources/config/validation/Student.yml
+++ b/src/Busybee/StudentBundle/Resources/config/validation/Student.yml
@@ -18,3 +18,5 @@ Busybee\StudentBundle\Entity\Student:
         house:
             - Busybee\FormBundle\Validator\SettingChoice:
                 name: 'house.list'
+        enrolments:
+            - Busybee\StudentBundle\Validator\Enrolments: ~
