--- a/src/Busybee/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/StudentBundle/Resources/config/services.yml
@@ -64,3 +64,7 @@ services:
             - '@doctrine.orm.entity_manager'
         tags:
             - { name: form.type }
+    student.enrolments.validator:
+        class: Busybee\StudentBundle\Validator\Constraints\EnrolmentsValidator
+        tags:
+            - { name: validator.constraint_validator, alias: student_enrolments_validator }
