At Person Extra Table and move vehicleRegistration from careGiver to Extra table.
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -119,6 +119,10 @@ Busybee\PersonBundle\Entity\Person:
             cascade: [all]
             mappedBy: person
             nullable: true
+        extra:
+            targetEntity: Busybee\PersonBundle\Entity\PersonExtra
+            cascade: [all]
+            mappedBy: person
     oneToMany:
         careGiver:
             targetEntity: Busybee\FamilyBundle\Entity\CareGiver
