--- a/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
+++ b/src/Busybee/PersonBundle/Resources/config/person/parameters.yml
@@ -32,3 +32,7 @@ parameters:
             label: person.tab.user
             include: BusybeePersonBundle:Person:user.html.twig
             message: userMessage
+        extra:
+            label: person.tab.extra
+            include: BusybeePersonBundle:Person:extra.html.twig
+            message: extraMessage
