Add Timetable Table
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -1,3 +1,6 @@
 timetable_manage:
     path:     /manage/{currentSearch}
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:list, currentSearch: null }
+timetable_edit:
+    path:     /edit/{id}/{currentSearch}
+    defaults: { _controller: BusybeeTimeTableBundle:TimeTable:edit, currentSearch: null }
