--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
@@ -30,6 +30,9 @@ Busybee\TimeTableBundle\Entity\TimeTable:
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
+            joinColumns:
+                year:
+                    referencedColumnName: id
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
             joinColumns:
