End of Day 11th April 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/menu/parameters.yml
@@ -25,11 +25,11 @@ parameters:
             route: campus_manage
         1401:
             label: menu.campus.spaces
-            name: Campus Resource Management
+            name: Space Management
             role: ROLE_REGISTRAR
             node: 140
             order: 1401
-            route: campus_resource_manage
+            route: campus_space_manage
             translate: BusybeeInstituteBundle
         141:
             label: menu.calendar.manage
