--- a/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/doctrine/TimeTable.orm.yml
@@ -27,6 +27,10 @@ Busybee\TimeTableBundle\Entity\TimeTable:
             type: datetime
         createdOn:
             type: datetime
+    oneToMany:
+        lines:
+            targetEntity: Busybee\TimeTableBundle\Entity\Line
+            mappedBy: timetable
     manyToOne:
         year:
             targetEntity: Busybee\InstituteBundle\Entity\Year
