--- a/src/Busybee/TimeTableBundle/Resources/config/services.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/services.yml
@@ -45,3 +45,9 @@ services:
             - '@doctrine.orm.entity_manager'
         tags:
             - { name: form.type }
+    form.limetablke.line.type:
+        class: Busybee\TimeTableBundle\Form\LineType
+        arguments:
+            - '@doctrine.orm.entity_manager'
+        tags:
+            - { name: form.type }
