End of Day 12 Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/HomeBundle/Resources/config/services.yml
+++ b/src/Busybee/HomeBundle/Resources/config/services.yml
@@ -90,3 +90,7 @@ services:
             - '@translator'
         tags:
             - { name: twig.extension }
+    math.extension:
+        class: Busybee\HomeBundle\Model\MathExtension
+        tags:
+            - { name: twig.extension }
