--- a/src/Busybee/InstituteBundle/Resources/config/routing.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/routing.yml
@@ -34,3 +34,6 @@ campus_space_manage:
 campus_space_edit:
     path:     /campus/space/{id}/edit/
     defaults: { _controller: BusybeeInstituteBundle:Campus:editSpace }
+department_edit:
+    path:     /department/{id}/edit/
+    defaults: { _controller: BusybeeInstituteBundle:Department:edit, id: 'Add' }
