--- a/src/Busybee/StaffBundle/Resources/config/validation/Staff.yml
+++ b/src/Busybee/StaffBundle/Resources/config/validation/Staff.yml
@@ -13,3 +13,5 @@ Busybee\StaffBundle\Entity\Staff:
                 name: 'house.list'
         person:
             - NotBlank: ~
+        department:
+            - Valid: ~
