End of Day 13 Apr 2017 Depart Staff added
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Department.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Department.orm.yml
@@ -23,10 +23,11 @@ Busybee\InstituteBundle\Entity\Department:
             type: datetime
         createdOn:
             type: datetime
-    manyToMany:
+    oneToMany:
         staff:
-            targetEntity: Busybee\StaffBundle\Entity\Staff
+            targetEntity: Busybee\InstituteBundle\Entity\DepartmentStaff
             mappedBy: department
+            cascade: [ all ]
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
