--- a/src/Busybee/InstituteBundle/Resources/config/validation/Department.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/validation/Department.yml
@@ -15,5 +15,7 @@ Busybee\InstituteBundle\Entity\Department:
                 max: 4
         staff:
             - Valid: ~
+            - Busybee\InstituteBundle\Validator\DepartmentStaff:
+                errorPath: staff
         type:
             - NotBlank: ~
