--- a/src/Busybee/InstituteBundle/Resources/config/doctrine/Department.orm.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/doctrine/Department.orm.yml
@@ -28,6 +28,18 @@ Busybee\InstituteBundle\Entity\Department:
             targetEntity: Busybee\InstituteBundle\Entity\DepartmentStaff
             mappedBy: department
             cascade: [ all ]
+    manyToMany:
+        courses:
+            targetEntity: Busybee\CurriculumBundle\Entity\Course
+            joinTable:
+                name: department_course
+                joinColumns:
+                    dept_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    course_id:
+                        referencedColumnName: id
+                        unique: true
     manyToOne:
         createdBy:
             targetEntity: Busybee\SecurityBundle\Entity\User
