Security Roles loaded direct from parameters. Removed some dump
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/SecurityBundle/Resources/config/services.yml
+++ b/src/Busybee/SecurityBundle/Resources/config/services.yml
@@ -137,6 +137,7 @@ services:
         arguments:
             - '%security.role_hierarchy.roles%'
             - '@doctrine.orm.default_entity_manager'
+            - '%roles%'
     busybee_security.util.tokengenerator:
         class: Busybee\SecurityBundle\Util\TokenGenerator
         arguments: 
