End of Day 16 Apr 2017
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/TimeTableBundle/Resources/config/routing.yml
+++ b/src/Busybee/TimeTableBundle/Resources/config/routing.yml
@@ -2,5 +2,5 @@ timetable_manage:
     path:     /manage/{currentSearch}
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:list, currentSearch: null }
 timetable_edit:
-    path:     /edit/{id}/{currentSearch}
+    path:     /{id}/edit/{currentSearch}
     defaults: { _controller: BusybeeTimeTableBundle:TimeTable:edit, currentSearch: null }
